refactor: replace path constants with Direction enum for clarity